--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Employee-Directory
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee_directory
-spring.datasource.username=postgres
-spring.datasource.password=1920rockjazz
+spring.datasource.username=yourUsername
+spring.datasource.password=yourPassword
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
